change db to postgre

--- a/.env
+++ b/.env
@@ -5,6 +5,11 @@ API_TOKEN_SALT=Xk3x3xbg4mE1CeospCs8Yw==
 ADMIN_JWT_SECRET=fWCSAtV7cnjG71ui1hAMOg==
 TRANSFER_TOKEN_SALT=7Y0lqXrcyDikMjA6AfKjsg==
 # Database
-DATABASE_CLIENT=sqlite
+DATABASE_CLIENT=postgres
+DATABASE_URL=postgres://strapi_db_4uob_user:ZTLixCkpG0APtJLphjctXssaH4xXUapJ@dpg-cgisf2hr8t1g7ls3eug0-a/strapi_db_4uob
+DATABASE_HOST=dpg-cgisf2hr8t1g7ls3eug0-a
+DATABASE_NAME=strapi_db_4uob
+DATABASE_USERNAME=strapi_db_4uob_user
+DATABASE_PASSWORD=ZTLixCkpG0APtJLphjctXssaH4xXUapJ
 DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=Bqx73CTS3t3dQia/QPsWUA==
