add cloudinary images

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ DATABASE_USERNAME=strapi_db_4uob_user
 DATABASE_PASSWORD=ZTLixCkpG0APtJLphjctXssaH4xXUapJ
 DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=Bqx73CTS3t3dQia/QPsWUA==
+# Cloudinary
+CLOUDINARY_NAME=dmuaice3b
+CLOUDINARY_KEY=766467372551456
+CLOUDINARY_SECRET=kkPA90561qDEwRph9DIC8Cchgkc
