--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.9.0",
     "@strapi/plugin-users-permissions": "4.9.0",
-    "@strapi/strapi": "4.9.0",
+    "@strapi/provider-upload-cloudinary": "^4.10.1",
+    "@strapi/strapi": "4.10.1",
     "better-sqlite3": "8.0.1",
     "pg": "^8.10.0"
   },
